--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,31 +16,33 @@ body {
 
 /*Heading sizes*/
 h1 {
-  font-size: 6rem;
+  font-size: 4rem;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-size: 4.5rem;
+  font-size: 3.2rem;
+  font-family: "Abril Fatface", serif;
 }
 
 h3 {
-  font-size: 3.5rem;
+  font-size: 2.4rem;
+  font-family: "Abril Fatface", serif;
 }
 
 h4 {
-  font-size: 3rem;
+  font-size: 2rem;
+  font-family: "Abril Fatface", serif;
 }
 
 h5 {
-  font-size: 2.5rem;
-}
-
-h6 {
-  font-size: 2rem;
+  font-size: 1.1rem;
+  font-family: "Abril Fatface", serif;
 }
 
 p {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
+  font-family: "Raleway", sans-serif;
 }
 
 li,
@@ -50,37 +52,49 @@ a {
 
 /*Section [Navigation]*/
 nav {
-  height: 100px;
   max-width: 100%;
-  align-items: center;
-  justify-content: center;
+}
+
+.top-nav {
   background-color: black;
   display: flex;
-  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  gap: 5px;
+  height: 50px;
+}
+
+.top-nav p {
+  color: white;
+  font-size: 1.2rem;
+}
+
+.fa-truck {
+  font-size: 1.2rem;
+  color: white;
 }
 
 nav ul {
   display: flex;
-  gap: 20px;
+  background-color: white;
+  gap: 100px;
   list-style: none;
-  margin: 0 auto;
+  height: 60px;
   align-items: center;
-}
-
-nav img {
-  width: 50px;
-  height: 50px;
-  margin-left: 20px;
+  justify-content: end;
+  margin-right: 100px;
 }
 
 nav a {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   font-weight: 600;
-  color: white;
+  color: black;
+  font-family: "Raleway", sans-serif;
 }
 
 .nav-links a:hover {
-  color: tomato;
+  color: rgb(18, 18, 18);
   transition: all 250ms ease-in-out;
 }
 
@@ -94,7 +108,7 @@ nav i {
   color: white;
 }
 
-.signup-btn {
+.btn {
   display: inline-block;
   padding: 13px 35px;
   font-size: 1.6rem;
@@ -107,8 +121,7 @@ nav i {
   cursor: pointer;
 }
 
-.signup-btn:hover {
-  background-color: rgb(224, 82, 57);
+.btn:hover {
   transition: all 250ms ease-in-out;
 }
 
@@ -117,7 +130,7 @@ nav i {
   position: relative;
 }
 
-.nav-links a:not(.signup-btn)::after {
+.nav-links a::after {
   position: absolute;
   content: "";
   height: 2px;
@@ -176,16 +189,60 @@ nav i {
   .burgerMenuClose.active {
     display: block;
   }
-
-  nav img {
-    margin-right: auto;
-    margin-left: 20px;
-  }
 }
 
 /*Section [Hero]*/
+.hero {
+  max-width: 100%;
+}
 
-/*Section [name]*/
+.hero-slider img {
+  width: 100%;
+}
+
+.hero-slider h2 {
+  color: white;
+  position: absolute;
+  margin-top: -160px;
+  margin-left: 700px;
+}
+
+.hero-slider h2:nth-of-type(2) {
+  padding-top: 35px;
+}
+
+.hero-grid {
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.hero-grid img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/*Section [Our products]*/
+.our-products {
+  max-width: 100%;
+  align-items: center;
+  padding-top: 170px;
+  display: flex;
+  flex-direction: column;
+}
+
+.our-products-container-flex {
+  display: flex;
+  gap: 47px;
+}
+
+.our-products-container-flex img {
+  width: 80px;
+  height: 80px;
+  align-self: center;
+}
 
 /*Section [name]*/
 
@@ -201,31 +258,27 @@ nav i {
 @media screen and (max-width: 768px) {
   /*Heading sizes*/
   h1 {
-    font-size: 5rem;
+    font-size: 3.5rem;
   }
 
   h2 {
-    font-size: 4rem;
+    font-size: 2.8rem;
   }
 
   h3 {
-    font-size: 3rem;
-  }
-
-  h4 {
-    font-size: 2.5rem;
-  }
-
-  h5 {
     font-size: 2rem;
   }
 
-  h6 {
+  h4 {
     font-size: 1.8rem;
   }
 
+  h5 {
+    font-size: 0.8rem;
+  }
+
   p {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
 
   /*Section [Hero]*/
