--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,26 +19,25 @@ h1 {
   font-size: 4rem;
   font-family: "Abril Fatface", serif;
   text-align: center;
+  font-weight: 500;
 }
 
 h2 {
   font-size: 3.2rem;
   font-family: "Abril Fatface", serif;
+  font-weight: 500;
 }
 
 h3 {
   font-size: 2.4rem;
   font-family: "Abril Fatface", serif;
+  font-weight: 500;
 }
 
 h4 {
   font-size: 2rem;
-  font-family: "Abril Fatface", serif;
-}
-
-h5 {
-  font-size: 1.1rem;
-  font-family: "Abril Fatface", serif;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
 }
 
 p {
@@ -201,19 +200,40 @@ nav a {
   max-width: 100%;
 }
 
+.hero-slider {
+  position: relative;
+}
+
 .hero-slider img {
   width: 100%;
+  position: relative;
 }
 
 .hero-slider h2 {
   color: white;
   position: absolute;
-  margin-top: -160px;
-  margin-left: 700px;
+  left: 40%;
+  top: 75%;
+  text-align: end;
 }
 
-.hero-slider h2:nth-of-type(2) {
-  padding-top: 35px;
+@media (max-width: 1288px) {
+  .hero-slider h2 {
+    font-size: 2.8rem;
+  }
+}
+
+@media (max-width: 1127px) {
+  .hero-slider h2 {
+    left: 20%;
+  }
+}
+
+@media (max-width: 850px) {
+  .hero-slider h2 {
+    font-size: 2.5rem;
+    right: 50%;
+  }
 }
 
 .hero-grid {
@@ -227,6 +247,13 @@ nav a {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .hero-grid {
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
+  }
 }
 
 /*Section [Our products]*/
@@ -316,8 +343,6 @@ nav a {
 .contact {
   max-width: 100%;
   background-color: #e6e6e6;
-  align-items: center;
-  justify-content: center;
 }
 
 .contact h1 {
@@ -405,6 +430,36 @@ nav a {
 
   p {
     font-size: 1.2rem;
+  }
+
+  /*Our Products*/
+  .our-products {
+    padding-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .our-products h1 {
+    margin-bottom: 80px;
+  }
+
+  /*Recommended*/
+  .recommended {
+    padding-bottom: 80px;
+  }
+
+  .recommended h1 {
+    padding-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  /*Contact*/
+  .contact h1 {
+    padding-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .contactContainer {
+    padding-bottom: 50px;
   }
 }
 
