--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -161,13 +161,14 @@ nav a {
     position: absolute;
     width: 100%;
     height: auto;
-    padding: 20px 0 20px 0;
-    height: 150px;
+    padding: 30px 0px 30px 0px;
     justify-content: center;
+    z-index: 999;
   }
 
   .nav-links li {
-    margin-bottom: 5px;
+    margin-bottom: 8px;
+    margin-top: 10px;
   }
 
   .burgerMenuOpen {
@@ -217,6 +218,21 @@ nav a {
   text-align: end;
 }
 
+.hero-grid {
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  position: relative;
+  bottom: 3px;
+}
+
+.hero-grid img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media (max-width: 1288px) {
   .hero-slider h2 {
     font-size: 2.8rem;
@@ -232,27 +248,27 @@ nav a {
 @media (max-width: 850px) {
   .hero-slider h2 {
     font-size: 2.5rem;
-    right: 50%;
+    width: fit-content;
+    left: 13%;
   }
-}
-
-.hero-grid {
-  max-width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-}
-
-.hero-grid img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 @media (max-width: 768px) {
   .hero-grid {
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(3, auto);
+  }
+
+  .hero-slider h2 {
+    font-size: 2rem;
+    left: 15%;
+  }
+}
+
+@media (max-width: 700px) {
+  .hero-slider h2 {
+    font-size: 1.8rem;
+    left: 12%;
   }
 }
 
@@ -356,7 +372,8 @@ nav a {
   padding-bottom: 200px;
 }
 
-.contactContainer input {
+#nameInput,
+#mailInput {
   font-family: "Raleway", sans-serif;
   background-color: #e6e6e6;
   margin: 0 auto;
@@ -368,15 +385,15 @@ nav a {
   border: 1px solid black;
 }
 
-.contactContainer input:nth-of-type(1) {
+#nameInput {
   margin-bottom: 34px;
 }
 
-.contactContainer input:nth-of-type(2) {
+#mailInput {
   margin-bottom: 21px;
 }
 
-.contactContainer textarea {
+#textArea {
   font-family: "Raleway", sans-serif;
   padding: 13px 19px;
   background-color: #e6e6e6;
@@ -397,12 +414,78 @@ nav a {
   color: rgb(234, 234, 234);
   font-weight: 300;
   border: none;
+  margin-bottom: 30px;
+}
+
+#submitInput.active,
+#nameInput.active,
+#textArea.active,
+#mailInput.active {
+  display: none;
 }
 
 #submitInput:hover {
   background-color: rgb(53, 53, 53);
   transition: all 250ms ease-in-out;
   cursor: pointer;
+}
+
+#pushMessage {
+  margin: 0 auto;
+  display: none;
+  text-align: center;
+  background-color: white;
+  box-shadow: 10px 10px 7px 6px #00000021;
+  width: 30%;
+  font-family: "Raleway", sans-serif;
+  animation: mailSentSlideIn 500ms;
+  margin-top: 50px;
+}
+
+.fa-envelope {
+  font-size: 6rem;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
+#pushMessage p {
+  font-size: 1.6rem;
+  margin-bottom: 40px;
+}
+
+#pushMessage a {
+  display: inline-block;
+  padding: 10px 35px;
+  font-size: 1.4rem;
+  border-radius: 10px;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  background-color: #24292e;
+  cursor: pointer;
+  border: 2px solid #24292e;
+}
+
+#pushMessage a:hover {
+  background-color: white;
+  transition: all 250ms ease-in-out;
+  color: black;
+}
+
+#pushMessage.active {
+  display: block;
+  z-index: 999;
+  padding-bottom: 40px;
+}
+
+@keyframes mailSentSlideIn {
+  from {
+    transform: translateX(60%);
+  }
+
+  to {
+    transform: translateX(0%);
+  }
 }
 
 /*Responsive*/
