--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,7 +116,6 @@ nav a {
   top: 68px;
   z-index: 998;
   width: 295px !important;
-  border: 1px solid pink;
 }
 
 .cart-icon {
@@ -211,13 +210,13 @@ nav a {
 }
 
 .whole-cart-window {
-  border: solid lightgray 1px;
   border-top: none;
-  position: fixed;
+  /*position:fixed;*/
   padding: 0px 7px;
   top: 110px;
   background-color: white;
-  margin-right: 2%;
+  margin-right: -1px;
+  padding-bottom: 1px;
 }
 
 .hide-shopping-list {
@@ -226,9 +225,9 @@ nav a {
 
 .none-empty::after {
   content: var(--after-content);
-  font-size: 1rem;
-  width: 15px;
-  height: 15px;
+  font-size: 0.9rem;
+  width: 14px;
+  height: 14px;
   display: inline-block;
   text-align: center;
   position: relative;
@@ -282,13 +281,13 @@ nav a {
   .top-nav p {
     font-size: 1.4rem;
     position: relative;
-    right: 200px;
+    right: 170px;
   }
 
   .fa-truck {
     font-size: 1.6rem;
     position: relative;
-    right: 200px;
+    right: 170px;
   }
 
   .nav-links {
@@ -344,7 +343,6 @@ nav a {
   }
 
   /*Shopping-cart*/
-
   .cart-box {
     top: 18px;
     width: 250px !important;
@@ -357,9 +355,9 @@ nav a {
 
   .whole-cart-window {
     padding: 0px 7px;
-    top: 80px;
     background-color: black;
-    margin-right: 2%;
+    margin-right: 0px;
+    padding-bottom: 1px;
   }
 
   .checkout {
@@ -371,17 +369,17 @@ nav a {
     border: 0px solid black;
   }
 
-  .whole-cart-window {
-    margin-right: 9%;
+  .none-empty::after {
+    font-size: 0.8rem;
+    width: 12px;
+    height: 12px;
+    background-color: white;
+    color: black;
   }
-}
 
-.none-empty::after {
-  font-size: 0.8rem;
-  width: 12px;
-  height: 12px;
-  background-color: white;
-  color: black;
+  .whole-cart-window h4 {
+    margin-top: 10px;
+  }
 }
 
 /*Section [Hero]*/
