--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,7 +62,9 @@ a {
 
 /*Section [Navigation]*/
 nav {
-  max-width: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 999;
 }
 
 .top-nav {
@@ -96,7 +98,7 @@ nav ul {
 }
 
 .a-contact {
-  margin-right: 10px;
+  margin-right: 330px;
 }
 
 nav ul:not(:nth-of-type(2)) {
@@ -236,7 +238,6 @@ nav a {
 
 .whole-cart-window {
   border-top: none;
-  /*position:fixed;*/
   padding: 0px 7px;
   top: 110px;
   background-color: white;
@@ -268,6 +269,11 @@ nav a {
   align-content: center;
 }
 /*Shopping-cart end*/
+
+.nav-links {
+  width: 100%;
+  position: absolute;
+}
 
 .burgerMenuOpen,
 .burgerMenuClose {
@@ -317,6 +323,10 @@ nav a {
     font-size: 1.6rem;
     position: relative;
     right: 170px;
+  }
+
+  .a-contact {
+    margin-right: 0px;
   }
 
   .nav-links {
